tests/query_errors/window_meta_in_tick/error.txt
Error: 
    5 |   $ + 1
      |   ^^^^^ `$` isn't accessible in this context